--- a/templates/index.html
+++ b/templates/index.html
@@ -11,7 +11,7 @@
         <form class="p-3 text-left" action='/', method="post" enctype="multipart/form-data">
             <div class="form-group">
               <label for="imageFile">Input Image</label>
-              <input type="file" class="form-control" name="imageFile" aria-describedby="emailHelp" placeholder="Input image">
+              <input type="file" class="form-control" name="imageFile" placeholder="Input image">
             </div>
 
             <div class="form-group mt-2">
